recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:4: error: not found: value int
  return spiral (steps-1,angle,length + int,int+2)
                                        ^Spiral:4: error: not found: value int
  return spiral (steps-1,angle,length + int,int+2)
                                            ^